--- a/action.yml
+++ b/action.yml
@@ -6,10 +6,10 @@ inputs:
   GH_TOKEN:
     description: 'GitHub access token with Repo scope'
     required: true
-    default: ${{ github.token }}
+    default: ${{ secrets.redme }}
 
   WAKATIME_API_KEY:
-    description: 'Your Wakatime API Key'
+    description: 'waka_8bc5f270-1256-46b2-b9a5-25cc5eb11d20'
     required: true
 
   SECTION_NAME:
