--- a/.github/workflows/CodingStats.yml
+++ b/.github/workflows/CodingStats.yml
@@ -11,7 +11,7 @@ jobs:
     name: Update this repo's README
     runs-on: ubuntu-latest
     steps:
-      - uses: AyonJD/waka-readme-stats@main #PLEASE USE MASTER BRANCH
+      - uses: anmol098/waka-readme-stats@master #PLEASE USE MASTER BRANCH
         with:
           WAKATIME_API_KEY: ${{ secrets.WAKA_TIME_SECRET }}
           GH_TOKEN: ${{ secrets.GH_TOKEN }}
