--- a/.github/workflows/CodingStats.yml
+++ b/.github/workflows/CodingStats.yml
@@ -11,7 +11,7 @@ jobs:
     name: Update this repo's README
     runs-on: ubuntu-latest
     steps:
-      - uses: anmol098/waka-readme-stats@master #PLEASE USE MASTER BRANCH
+      - uses: athul/waka-readme@master
         with:
           WAKATIME_API_KEY: ${{ secrets.WAKA_TIME_SECRET }}
           GH_TOKEN: ${{ secrets.GH_TOKEN }}
@@ -19,3 +19,8 @@ jobs:
           SHOW_LINES_OF_CODE: "True"
           SHOW_LOC_CHART: "False"
           LOCALE: "en"
+
+
+
+
+          
