--- a/.github/workflows/CodingStats.yml
+++ b/.github/workflows/CodingStats.yml
@@ -16,8 +16,10 @@ jobs:
           WAKATIME_API_KEY: ${{ secrets.WAKA_TIME_SECRET }}
           GH_TOKEN: ${{ secrets.GH_TOKEN }}
           SHOW_PROJECTS: "False"
+          SHOW_TITLE: "True"
           SHOW_LINES_OF_CODE: "True"
-          SHOW_LOC_CHART: "False"
+          SHOW_LOC_CHART: "True"
+          SHOW_TIME: "True"
           LOCALE: "en"
 
 
