--- a/.github/workflows/CodingStats.yml
+++ b/.github/workflows/CodingStats.yml
@@ -1,28 +1,18 @@
 name: Waka Readme
 
 on:
-  workflow_dispatch:
   schedule:
-    # Runs at 00:00AM UTC
-    - cron: '0 0 * * *'
-
+    # Runs at 12am IST
+    - cron: '30 18 * * *'
+  workflow_dispatch:
 jobs:
   update-readme:
-    name: Update this repo's README
+    name: Update Readme with Metrics
     runs-on: ubuntu-latest
     steps:
-      - uses: athul/waka-readme@master
+      - uses: anmol098/waka-readme-stats@master
         with:
           WAKATIME_API_KEY: ${{ secrets.WAKA_TIME_SECRET }}
           GH_TOKEN: ${{ secrets.GH_TOKEN }}
-          SHOW_PROJECTS: "False"
-          SHOW_TITLE: "True"
-          SHOW_LINES_OF_CODE: "True"
-          SHOW_LOC_CHART: "True"
-          SHOW_TIME: "True"
-          LOCALE: "en"
-
-
-
 
           
